[gd_scene load_steps=15 format=2]

[ext_resource path="res://playersprts/dino1.png" type="Texture" id=1]
[ext_resource path="res://playersprts/dino3.png" type="Texture" id=2]
[ext_resource path="res://playersprts/dino2.png" type="Texture" id=3]
[ext_resource path="res://dino.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/flappyfont.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://plants/Effects02/Frames/02/020028.png" type="Texture" id=6]
[ext_resource path="res://plants/Effects02/Frames/02/020023.png" type="Texture" id=7]
[ext_resource path="res://plants/Effects02/Frames/02/020027.png" type="Texture" id=8]
[ext_resource path="res://plants/Effects02/Frames/02/020024.png" type="Texture" id=9]
[ext_resource path="res://plants/Effects02/Frames/02/020025.png" type="Texture" id=10]
[ext_resource path="res://music/DeathFlash.mp3" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": false,
"name": "dead",
"speed": 20.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.5, 26 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[node name="dino" type="RigidBody2D"]
collision_layer = 2
collision_mask = 0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.5, 7 )
scale = Vector2( 0.944444, 0.764706 )
frames = SubResource( 1 )
flip_h = true

[node name="WaitTimer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.5, 7 )
scale = Vector2( 4.35, 2.6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 7 )
shape = SubResource( 2 )

[node name="DinoHealth" type="Label" parent="."]
margin_left = -40.0
margin_top = -36.0
margin_bottom = -22.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = 24.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
